testimonials correction first article text align

--- a/css/style.css
+++ b/css/style.css
@@ -218,10 +218,18 @@ header nav ul {
 .testimonials article:first-child {
     background-color: white;
     color: black;
+    text-align: center;
 }
 
+.sup-title {
+    text-transform: uppercase;
+}
 .testimonials article h1 {
     color: var(--violet-bg-color);
+}
+
+.testimonials .article-first > p {
+    padding: 0;
 }
 
 .testimonials article p {
